1999-06-22  Roland McGrath  <roland@baalperazim.frob.com>

	* rc.sh: Clean /tmp using special hackery to nuke translators.

1999-06-18  Roland McGrath  <roland@baalperazim.frob.com>

	* runsystem.sh: New file.
	* Makefile (targets, special-targets): Add runsystem.
	(runsystem): New target.

1999-06-15  Roland McGrath  <roland@baalperazim.frob.com>

	* runttys.c: New file.c
	* Makefile (targets, SRCS): Add runttys, runttys.c.
	(runttys): New target.
	(runttys-LDLIBS): New variable, -lutil.

	* console-run.c: New file.
	* Makefile (targets, SRCS): Add console-run, console-run.c.
	(console-run): New target.

1999-05-29  Roland McGrath  <roland@baalperazim.frob.com>

	* rc.sh: Don't create /var/run/uptime.  It's no longer used.

1999-05-15  Roland McGrath  <roland@baalperazim.frob.com>

	* rc.sh: Do `swapon -a' first thing.

Tue Mar  9 13:18:14 1999  Thomas Bushnell, BSG  <tb@mit.edu>

	* lmail.c (OPT_REMOVE): New macro.
	(options): Don't recognize -r as an alias for --remove, but
	recognize it separately as a hidden alias.
 	(main / parse_opt): Make -d do nothing.
	Make -r an alias for -f.  Have OPT_REMOVE do the removal thing.
	Reported by Mark Kettenis (kettenis@wins.uva.nl).

1998-12-06  Roland McGrath  <roland@baalperazim.frob.com>

	* lmail.c (deliver, main): Add braces to silence gcc warning.

1998-09-04  Roland McGrath  <roland@baalperazim.frob.com>

	* lmail.c: Include <time.h> and <sys/time.h>.

1998-07-19  Roland McGrath  <roland@baalperazim.frob.com>

	* getty.c: Include <string.h> for basename decl.

Wed Feb 19 23:05:13 1997  Miles Bader  <miles@gnu.ai.mit.edu>

	* lmail.c (argp_program_version): Make const.

Tue Oct 22 15:47:13 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* lmail.c (options): Make -l/--use-lock-file hidden, as we don't
 	support it anyway (we just leave it here in case someone does
 	implement it, so they'll know the right option to use for
 	compatibility).

Thu Oct 17 11:06:44 1996  Miles Bader  <miles@gnu.ai.mit.edu>
