@@ -1,3 +1,11 @@
+1999-07-01  Thomas Bushnell, BSG  <tb@mit.edu>
+
+	* rc.sh: Specify bash instead of sh.
+	(remove_translators): Don't descend into "." or "..".  Alter
+	calling convention slightly and require the `nullglob' option to
+	be set.  Change caller to suit.  From Kalle Olavi Niemitalo
+	<tosi@ees2.oulu.fi>.
+
 1999-06-22  Roland McGrath  <roland@baalperazim.frob.com>
 
 	* rc.sh: Clean /tmp using special hackery to nuke translators.
